--- a/car-workshop/views/inherit_fleet_vehicle.xml
+++ b/car-workshop/views/inherit_fleet_vehicle.xml
@@ -187,12 +187,12 @@
         </record>
 
         <!--Vehicle Models Menu-->
-        <menuitem id="car_vmodels_menu" name="Models"
+        <menuitem id="car_vmodels_menu" name="Vehicle Models"
                   parent="car_vconfig_menus"
                   sequence="2" action="action_car_vmodels_config"/>
 
         <!--Vehicle Brand Menu-->
-        <menuitem id="car_vbrands_menu" name="Brands"
+        <menuitem id="car_vbrands_menu" name="Vehicle Brands"
                   parent="car_vconfig_menus"
                   sequence="2" action="action_car_vbrands_config"/>
     </data>
