[IMP] modificar el menú de talleres y traducción

--- a/car-workshop/views/car-workshop.xml
+++ b/car-workshop/views/car-workshop.xml
@@ -26,18 +26,27 @@
             <field name="context">{"search_default_customer":1}</field>
         </record>
 
+        <!--Action Vendor Menu-->
+        <record model="ir.actions.act_window" id="action_car_vendors_config">
+            <field name="name">Masters</field>
+            <field name="res_model">res.partner</field>
+            <field name="view_type">form</field>
+            <field name="view_mode">kanban,form,tree</field>
+            <field name="context">{"search_default_supplier":1}</field>
+        </record>
+
 
         <!--Main Menu-->
         <menuitem id="main_car_workshop_menu" name="Car Workshop" sequence="1"
                   web_icon="car-workshop,static/description/icon.png"/>
 
-        <!--Management Menus-->
+        <!--Delivery and Invoices Menus-->
         <menuitem id="car_vmanagement_menus" name="Delivery and Invoice"
                   parent="main_car_workshop_menu"
                   sequence="3"/>
 
-        <!--Stock Move Menu-->
-        <menuitem id="car_stock_move_menu" name="Stock Move"
+        <!--Delivery Menu-->
+        <menuitem id="car_stock_move_menu" name="Delivery"
                   parent="car_vmanagement_menus"
                   sequence="1" action="action_car_stock_move_config"/>
 
@@ -47,20 +56,48 @@
                   sequence="2" action="account.action_invoice_tree1"/>
 
         <!--Customers Menus-->
-        <menuitem id="car_customers_menus" name="Customers"
+        <menuitem id="car_contacs_menus" name="Vendors and Customers"
                   parent="main_car_workshop_menu"
                   sequence="4"/>
 
+        <!--Vendors Menu-->
+        <menuitem id="car_vendors_menu" name="Masters"
+                  parent="car_contacs_menus"
+                  sequence="1" action="action_car_vendors_config"/>
         <!--Customer Menu-->
         <menuitem id="car_customers_menu" name="Customers"
-                  parent="car_customers_menus"
-                  sequence="1" action="action_car_customers_config"/>
+                  parent="car_contacs_menus"
+                  sequence="2" action="action_car_customers_config"/>
 
 
-        <!--Vehicle Configuration Menus-->
+
+        <!--Configuration Menus-->
         <menuitem id="car_vconfig_menus" name="Configuration"
                   parent="main_car_workshop_menu"
-                  sequence="6"/>
+                  sequence="10"/>
+
+
+        <!--Action Workshop Tags Menu-->
+        <record model="ir.actions.act_window" id="action_car_ws_tags_menu">
+            <field name="name">Workshop Tags</field>
+            <field name="res_model">project.tags</field>
+            <field name="view_type">form</field>
+            <field name="view_mode">tree,form</field>
+        </record>
+
+        <!--Workshop Tags Menu-->
+        <menuitem id="car_ws_tags_menu" name="Workshop Tags"
+                  parent="car_vconfig_menus"
+                  sequence="6" action="action_car_ws_tags_menu"/>
+
+
+
+        <!--Product Category Menu-->
+        <menuitem id="car_prod_cat_menu" name="Product Category"
+                  parent="car_vconfig_menus"
+                  sequence="7" action="product.product_category_action_form"/>
+
+
 
         <!--Action Products Menu-->
         <record model="ir.actions.act_window" id="action_car_vproducts_config">
@@ -69,10 +106,11 @@
             <field name="view_type">form</field>
             <field name="view_mode">kanban,form,tree</field>
         </record>
+
         <!--Catalogue Menu-->
         <menuitem id="tire_catalogue_menus" name="Catalogue"
                   parent="main_car_workshop_menu"
-                  sequence="5"/>
+                  sequence="7"/>
 
 
 
