--- a/car-workshop/report/cw_reports.xml
+++ b/car-workshop/report/cw_reports.xml
@@ -5,7 +5,7 @@
             id="action_report_admission_sheet"
             string="Admission Sheet"
             model="car_workshop.repair"
-            report_type="qweb-pdf"
+            report_type="qweb-html"
             file="car-workshop.report_admission_sheet"
             name="car-workshop.report_admission_sheet"
             print_report_name="'Hoja de Admisión - %s' % (object.name)"
