--- a/car-workshop/views/inherit_sale.xml
+++ b/car-workshop/views/inherit_sale.xml
@@ -3,18 +3,18 @@
     <data>
 
             <!-- Inherit Form View -->
-            <!--<record id="" model="ir.ui.view">-->
-                <!--<field name="name"></field>-->
-                <!--<field name="model"></field>-->
-                <!--<field name="inherit_id" ref=""/>-->
-                <!--<field name="arch" type="xml">-->
+            <record id="view_order_form" model="ir.ui.view">
+                <field name="name">sale.order.form</field>
+                <field name="model">sale.order</field>
+                <field name="inherit_id" ref="sale.view_order_form"/>
+                <field name="arch" type="xml">
 
-                    <!--<field name="partner_id" position="after">-->
-                        <!--<field name="repair_id"/>-->
-                    <!--</field>-->
+                    <field name="client_order_ref" position="after">
+                        <field name="repair_id"/>
+                    </field>
 
-                <!--</field>-->
-            <!--</record>-->
+                </field>
+            </record>
 
     </data>
 </odoo>
