[IMP]Vista previa para informes

--- a/car-workshop/report/cw_reports.xml
+++ b/car-workshop/report/cw_reports.xml
@@ -14,7 +14,7 @@
             id="action_report_quotation"
             string="Quotation"
             model="car_workshop.repair"
-            report_type="qweb-pdf"
+            report_type="qweb-html"
             file="car-workshop.report_quotation"
             name="car-workshop.report_quotation"
             print_report_name="'Presupuesto - %s' % (object.name)"
@@ -23,7 +23,7 @@
             id="cw_action_report_invoice"
             string="Factura Taller"
             model="account.invoice"
-            report_type="qweb-pdf"
+            report_type="qweb-html"
             file="car-workshop.cw_report_invoice"
             name="car-workshop.cw_report_invoice"
             print_report_name="'Factura - %s' % (object.name)"
