--- a/car-workshop/views/repair.xml
+++ b/car-workshop/views/repair.xml
@@ -15,10 +15,12 @@
                                 type="action" class="btn-primary"
                                 context="{'default_advance_payment_method': 'all'}"
                                 attrs="{'invisible': [('invoice_status', '!=', 'to invoice')]}"/>
+
                         <button name="%(action_view_sale_advance_payment_inv)d" string="Create Invoice"
                                 type="action" context="{'default_advance_payment_method': 'percentage'}"
                                 attrs="{'invisible': ['|',('invoice_status', '!=', 'no'), ('state', '!=', 'sale')]}"/>
 
+                        <!--ENIAR PRESUPUESTO, FALTA POR IMPLEMENTAR-->
                         <!--&lt;!&ndash;Enviar el presupuesto por correo&ndash;&gt;-->
                         <!--<button name="action_quotation_send" string="Send by Email" type="object" states="draft"-->
                                 <!--class="btn-primary"/>-->
@@ -35,19 +37,9 @@
                                 <!--context="{'proforma': True}"/>-->
 
 
-                        <!--Imprimir Presupuesto PDF-->
-                        <button name="print_quotation" string="Print" type="object" states="draft"
-                                class="btn-primary o_sale_print"/>
-                        <button name="print_quotation" string="Print" type="object" states="sent,sale"
-                                class="o_sale_print"/>
+                        <button name="action_confirm" string="Confirm Sale" type="object" class="btn-primary"
+                                attrs="{'invisible': [('state', 'not in', ['draft','sent'])]}"/>
 
-
-
-
-                        <button name="action_confirm" id="action_confirm" string="Confirm Sale" class="btn-primary"
-                                type="object" attrs="{'invisible': [('state', 'not in', ['sent'])]}"/>
-                        <button name="action_confirm" string="Confirm Sale" type="object"
-                                attrs="{'invisible': [('state', 'not in', ['draft'])]}"/>
 
                         <button name="action_cancel" states="draft,sent,sale" type="object" string="Cancel"/>
                         <button name="action_draft" states="cancel" type="object" string="Set to Quotation"/>
@@ -71,8 +63,10 @@
                                 <field name="delivery_count" widget="statinfo" string="Delivery"/>
                             </button>
                             <button name="action_admission_sheet" type="object" class="oe_stat_button"
-                                    icon="fa-info-circle" string="Admission Sheet">
-                            </button>
+                                    icon="fa-print" string="Admission Sheet"/>
+                            <button name="print_quotation" type="object" class="oe_stat_button"
+                                    icon="fa-print" string="Quotation"/>
+
                             <button name="action_finised" type="object" class="oe_stat_button" icon="fa-archive">
                                 <field name="finished_stage" widget="boolean_button" string="Finished"
                                        options='{"terminology": {
@@ -116,7 +110,7 @@
                                        context="{'default_type':'delivery'}" options="{'always_reload': True}"
                                        attrs="{'invisible':1}"/>
 
-                                <field name="project_id" invisible="1"/>
+                                <field name="project_id" string=" Work Area" domain="[('car_work','=',True)]"/>
 
                             </group>
                             <group>
@@ -250,10 +244,6 @@
                                         <field name="state" invisible="1"/>
                                         <field name="invoice_status" invisible="1"/>
                                         <field name="customer_lead" invisible="1"/>
-                                        <!--
-                                                                                <field name="currency_id" invisible="1"/>
-                                        -->
-
                                     </tree>
                                 </field>
                                 <group class="oe_subtotal_footer oe_right" colspan="2" name="sale_total">
@@ -380,23 +370,12 @@
                 <kanban default_group_by="stage_id" class="o_res_partner_kanban"
                         quick_create="true">
                     <field name="color"/>
-                    <!--<field name="priority"/>-->
                     <field name="stage_id"
                            options="{&quot;group_by_tooltip&quot;: {&quot;description&quot;: &quot;Stage Description&quot;, &quot;legend_priority&quot;: &quot;Use of stars&quot;}}"/>
 
                     <field name="user_id"/>
-                    <!--<field name="user_email"/>-->
-                    <!--<field name="description"/>-->
-                    <!--<field name="sequence"/>-->
                     <field name="remaining_hours" groups="project.group_time_work_estimation_tasks"/>
                     <field name="date_deadline"/>
-                    <!--<field name="message_needaction_counter"/>-->
-                    <!--<field name="attachment_ids"/>-->
-                    <!--<field name="displayed_image_id"/>-->
-                    <!--<field name="active"/>-->
-                    <!--<field name="legend_blocked"/>-->
-                    <!--<field name="legend_normal"/>-->
-                    <!--<field name="legend_done"/>-->
                     <field name="vehicle_id"/>
                     <field name="image_client_vehicle"/>
                     <field name="activity_ids"/>
@@ -408,7 +387,7 @@
                     <templates>
                         <t t-name="kanban-box">
 
-                            <div class="oe_kanban_global_click o_res_partner_kanban">
+                            <div t-attf-class="oe_kanban_color_#{kanban_getcolor(record.color.raw_value)}  oe_kanban_global_click o_res_partner_kanban">
                                 <div class="o_kanban_image">
                                     <img t-att-src="kanban_image('fleet.vehicle', 'image_client_vehicle', record.vehicle_id.raw_value)"/>
                                 </div>
@@ -531,21 +510,5 @@
             </field>
         </record>
 
-        <!--Action Repair Menu-->
-        <!--<record model="ir.actions.act_window" id="action_car_repairs_config">-->
-        <!--<field name="name">Repairs</field>-->
-        <!--<field name="res_model">car_workshop.repair</field>-->
-        <!--<field name="form_view_id" ref="car-workshop_repair_view_form"/>-->
-        <!--<field name="kanban_view_id" ref="car-workshop_repair_view_kanban"/>-->
-        <!--<field name="calendar_view_id" ref="car-workshop_repair_view_calendar"/>-->
-        <!--<field name="view_type">form</field>-->
-        <!--<field name="view_mode">kanban,calendar,tree,form</field>-->
-        <!--</record>-->
-
-
-        <!--Repair Menu-->
-        <!--<menuitem id="car_repairs_menu" name="Repairs"-->
-        <!--parent="main_car_workshop_menu"-->
-        <!--sequence="2" action="action_car_repairs_config"/>-->
     </data>
 </odoo>
