[FIX]Contar reparaciones activas[REF]smartbutton finalizado

--- a/car-workshop/views/repair.xml
+++ b/car-workshop/views/repair.xml
@@ -71,7 +71,7 @@
                                 <field name="finished_stage" widget="boolean_button" string="Finished"
                                        options='{"terminology": {
                                     "string_true": "Terminado",
-                                    "hover_true": "Re-Activar?",
+                                    "hover_true": "Activar?",
                                     "string_false": "Activo",
                                     "hover_false": "Terminar?"
                                 }}'/>
