--- a/car-workshop/views/inherit_res_config_settings.xml
+++ b/car-workshop/views/inherit_res_config_settings.xml
@@ -9,11 +9,10 @@
         <field name="inherit_id" ref="base.res_config_settings_view_form"/>
         <field name="arch" type="xml">
             <xpath expr="//div[hasclass('settings')]" position="inside">
-                <!--La Magia-->
                 <div class="app_settings_block" data-string="Car Workshop" string="Car Workshop" data-key="car-workshop">
-
                     <h2>Areas</h2>
                     <div class="row mt16 o_settings_container">
+
                         <div class="col-xs-12 col-md-6 o_setting_box">
                             <div class="o_setting_left_pane">
                                 <field name="areas_count" attrs="{'invisible':1}"/>
@@ -27,21 +26,31 @@
                                 </div>
                             </div>
                         </div>
-                         <div class="col-xs-12 col-md-6 o_setting_box">
+                        <div class="col-xs-12 col-md-6 o_setting_box">
                             <div class="o_setting_left_pane">
-                                <field name="module_sdi_unique_area" readonly="1"/>
+                                <field name="module_aesthetic_changes_spanish"/>
                             </div>
                             <div class="o_setting_right_pane">
-                                <label for="module_sdi_unique_area"/>
+                                <label for="module_aesthetic_changes_spanish"/>
                                 <div class="text-muted">
-                                    Funcionalidad en TEST.<br/>
-                                    Utilize la funcionalidad "Unique Area 'Repair and Revision'".<br/>
-                                    Te instala el modulo 'sdi_unique_area'. Este modulo añade un menú
-                                    'Unique Area' que puedes ver en el archivo unque_area.xml y que llama al action que hay definido
-                                    encima.
+                                    Check this to install SDi Aesthetics changes for spanish version. This module change
+                                    the vehicle model form.
                                 </div>
                             </div>
                         </div>
+                        <div class="col-xs-12 col-md-6 o_setting_box">
+                            <div class="o_setting_left_pane">
+                                <field name="module_tire_catalog"/>
+                            </div>
+                            <div class="o_setting_right_pane">
+                                <label for="module_tire_catalog"/>
+                                <div class="text-muted">
+                                    Check this for install SDi Tire Catalog. A complete module to specify a product as a tire.
+                                    And filter it.
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </xpath>
