--- a/car-workshop/views/repair.xml
+++ b/car-workshop/views/repair.xml
@@ -20,21 +20,8 @@
                                 type="action" context="{'default_advance_payment_method': 'percentage'}"
                                 attrs="{'invisible': ['|',('invoice_status', '!=', 'no'), ('state', '!=', 'sale')]}"/>
 
-                        <!--ENIAR PRESUPUESTO, FALTA POR IMPLEMENTAR-->
-                        <!--&lt;!&ndash;Enviar el presupuesto por correo&ndash;&gt;-->
-                        <!--<button name="action_quotation_send" string="Send by Email" type="object" states="draft"-->
-                                <!--class="btn-primary"/>-->
-                        <!--<button name="action_quotation_send" string="Send by Email" type="object" states="sent,sale"/>-->
-
-                        <!--&lt;!&ndash;Enviar el presupuesto "PRO-Forma" por correo&ndash;&gt;-->
-                        <!--<button name="action_quotation_send" type="object" string="Send PRO-FORMA Invoice"-->
-                                <!--groups="sale.group_proforma_sales" class="btn-primary"-->
-                                <!--attrs="{'invisible': ['|', ('state', '!=', 'draft'), ('invoice_count','&gt;=',1)]}"-->
-                                <!--context="{'proforma': True}"/>-->
-                        <!--<button name="action_quotation_send" type="object" string="Send PRO-FORMA Invoice"-->
-                                <!--groups="sale.group_proforma_sales"-->
-                                <!--attrs="{'invisible': ['|', ('state', '=', 'draft'), ('invoice_count','&gt;=',1)]}"-->
-                                <!--context="{'proforma': True}"/>-->
+                        <button name="action_cw_quotation_send" string="Send Quotation by Email" type="object"
+                                class="btn-primary"/>
 
 
                         <button name="action_confirm" string="Confirm Sale" type="object" class="btn-primary"
