--- a/car-workshop/views/repair.xml
+++ b/car-workshop/views/repair.xml
@@ -113,7 +113,7 @@
                         </group>
                         <group>
                             <div>
-                                <field name="description"/>
+                                <field name="description" placeholder="Describe the incidence."/>
                             </div>
                         </group>
                         <notebook>
@@ -257,15 +257,16 @@
                                         <field name="product_uom_qty"/>
                                         <field name="product_uom"/>
                                         <field name="location_id" invisible="1"/>
+                                        <field name="location_id" invisible="1"/>
                                         <field name="location_dest_id" invisible="1"/>
                                         <field name="move_id" invisible="1"/>
                                         <button name="consume_done" type="object" string="Consume"
-                                                class="oe_highlight" attrs="{'invisible': [('consumed','=',True)]}"
-                                                icon="fa-cubes">
+                                                attrs="{'invisible': [('consumed','=',True)]}"
+                                                icon="fa-cogs">
                                             <field name="consumed"/>
                                         </button>
                                         <button name="to_quotation_done" type="object" string="To Quotation"
-                                                class="oe_highlight" attrs="{'invisible': [('to_quotation','=',True)]}"
+                                                attrs="{'invisible': [('to_quotation','=',True)]}"
                                                 icon="fa-credit-card-alt">
                                             <field name="to_quotation"/>
                                         </button>
@@ -380,7 +381,7 @@
                                 </div>
                                 <div class="oe_kanban_details">
                                     <field name="progress" widget="progressbar"/>
-                                    <field name="date_start" widget="date"/>
+                                    Entry Date: <field name="date_start" widget="date"/>
                                     <br/>
 
                                     <strong class="o_kanban_record_title">
@@ -396,7 +397,7 @@
                                     <t t-if="record.date_deadline.raw_value and record.date_deadline.raw_value lt (new Date())"
                                        t-set="red">oe_kanban_text_red
                                     </t>
-
+                                    <t t-if="record.date_deadline.raw_value"> Deadline Date:</t>
                                     <span t-attf-class="#{red || ''}">
                                         <i>
                                             <field name="date_deadline"/>
@@ -410,15 +411,14 @@
                                     </div>
 
 
-                                    <small class="o_kanban_record_subtitle text-muted">
-                                        <field name="project_id"
-                                               invisible="context.get('default_project_id', False)"/>
-                                        <t t-if="record.date_deadline.raw_value and record.date_deadline.raw_value lt (new Date())"
-                                           t-set="red">oe_kanban_text_red
-                                        </t>
-
-                                        <!--<t t-if="record.email_from.raw_value"><span><field name="email_from"/></span></t>-->
-                                    </small>
+                                    <!--<small class="o_kanban_record_subtitle text-muted">-->
+                                        <!--<field name="project_id"-->
+                                               <!--invisible="context.get('default_project_id', False)"/>-->
+                                        <!---->
+                                        <!--<t t-if="record.date_deadline.raw_value and record.date_deadline.raw_value lt (new Date())"-->
+                                           <!--t-set="red">oe_kanban_text_red-->
+                                        <!--</t>-->
+                                    <!--</small>-->
                                     <div class="o_kanban_record_bottom">
                                         <div class="oe_kanban_bottom_left">
                                             <field name="priority" widget="priority"/>
