--- a/car-workshop/views/car-workshop.xml
+++ b/car-workshop/views/car-workshop.xml
@@ -32,7 +32,8 @@
             <field name="res_model">res.partner</field>
             <field name="view_type">form</field>
             <field name="view_mode">kanban,form,tree</field>
-            <field name="context">{"search_default_supplier":1}</field>
+            <field name="context">{'search_default_supplier': 1,'default_customer': 0,'default_supplier': 1,
+                'default_company_type': 'company'}</field>
         </record>
 
 
