--- a/car-workshop/views/car-workshop.xml
+++ b/car-workshop/views/car-workshop.xml
@@ -102,7 +102,7 @@
         <!--Action Products Menu-->
         <record model="ir.actions.act_window" id="action_car_vproducts_config">
             <field name="name">Products</field>
-            <field name="res_model">product.product</field>
+            <field name="res_model">product.template</field>
             <field name="view_type">form</field>
             <field name="view_mode">kanban,form,tree</field>
         </record>
