--- a/tire_catalog/views/inherit_product_product.xml
+++ b/tire_catalog/views/inherit_product_product.xml
@@ -5,8 +5,8 @@
         <!-- Product Product Form View -->
         <record id="product_template_form_view" model="ir.ui.view">
             <field name="name">product.template.common.form</field>
-            <field name="model">product.product</field>
-            <field name="inherit_id" ref="product.product_normal_form_view"/>
+            <field name="model">product.template</field>
+            <field name="inherit_id" ref="product.product_template_only_form_view"/>
             <field name="arch" type="xml">
                 <xpath expr="//div[@name='options']" position="inside">
                     <div>
@@ -37,7 +37,6 @@
             <field name="model">product.product</field>
             <field name="inherit_id" ref="product.product_search_form_view"/>
             <field name="arch" type="xml">
-
                 <xpath expr="//field[@name='product_tmpl_id']" position="after">
                     <field name="width"/>
                     <field name="height"/>
@@ -45,7 +44,6 @@
                     <field name="brand_id"/>
                     <field name="season"/>
                 </xpath>
-
             </field>
         </record>
 
