[REF] date_deadline Date por Datetime[REF]produc_id no obligatorio en sale_order_line

--- a/car-workshop/views/repair.xml
+++ b/car-workshop/views/repair.xml
@@ -486,6 +486,7 @@
             <field name="model">car_workshop.repair</field>
             <field name="arch" type="xml">
                 <tree>
+                    <field name="date_deadline"/>
                     <field name="sale_order_id"/>
                     <field name="repair_title"/>
                     <field name="vehicle_id"/>
