[REF]que la primera vista sea lista.[ADD]valores en anchura, lo sacaremos a una nueva clase.

--- a/car-workshop/views/inherit_fleet_vehicle.xml
+++ b/car-workshop/views/inherit_fleet_vehicle.xml
@@ -6,10 +6,11 @@
             <field name="name">Repairs</field>
             <field name="res_model">car_workshop.repair</field>
             <field name="context">{'search_default_vehicle_id': active_id}</field>
-            <field name="view_mode">kanban,form,tree</field>
+            <field name="view_mode">tree,form,kanban</field>
             <field name="view_type">form</field>
             <field name="view_ids"
                    eval="[(5, 0, 0),
+                          (0, 0, {'view_mode': 'tree', 'view_id': ref('car-workshop_repair_view_tree')}),
                           (0, 0, {'view_mode': 'kanban', 'view_id': ref('car-workshop_repair_view_kanban')}),
                           (0, 0, {'view_mode': 'form', 'view_id': ref('car-workshop_repair_view_form')})]"
             />
