--- a/tire_catalog/views/inherit_product_product.xml
+++ b/tire_catalog/views/inherit_product_product.xml
@@ -47,7 +47,7 @@
             </field>
         </record>
 
-        <!--Action Tire Menu-->
+        <!--Action Search Tire Menu-->
         <record id="action_tire_view_wizard" model="ir.actions.act_window">
             <field name="name">Tire Wizard</field>
             <field name="type">ir.actions.act_window</field>
@@ -55,14 +55,29 @@
             <field name="view_type">form</field>
             <field name="view_mode">form</field>
             <field name="view_id" ref="tire_wizard_view_form"/>
-            <!--<field name="search_view_id" ref="car-workshop_fleet_wheels_view_search"/>-->
             <field name="target">new</field>
         </record>
+
+        <!--Action Tire Menu-->
+        <record model="ir.actions.act_window" id="action_tire_view">
+            <field name="name">Tires</field>
+            <field name="res_model">product.template</field>
+            <field name="view_type">form</field>
+            <field name="view_mode">kanban,form,tree</field>
+            <field name="domain">[("is_a_tire","=",True)]</field>
+            <field name="target">current</field>
+        </record>
+
 
         <!--Tires Menu-->
         <menuitem id="car_tire_menu" name="Tires"
                   parent="car-workshop.car_masters_menus"
-                  sequence="5" action="action_tire_view_wizard"/>
+                  sequence="5" action="action_tire_view"/>
+
+        <!--Search Tires Menu-->
+        <menuitem id="car_search_tire_menu" name=" Search Tires"
+                  parent="car-workshop.car_masters_menus"
+                  sequence="6" action="action_tire_view_wizard"/>
 
     </data>
 </odoo>
