--- a/tire_catalog/views/inherit_product_product.xml
+++ b/tire_catalog/views/inherit_product_product.xml
@@ -3,10 +3,10 @@
     <data>
 
         <!-- Product Product Form View -->
-        <record id="product_template_form_view" model="ir.ui.view">
-            <field name="name">product.template.common.form</field>
-            <field name="model">product.template</field>
-            <field name="inherit_id" ref="product.product_template_only_form_view"/>
+        <record id="product_normal_form_view" model="ir.ui.view">
+            <field name="name">product.product.common.form</field>
+            <field name="model">product.product</field>
+            <field name="inherit_id" ref="product.product_normal_form_view"/>
             <field name="arch" type="xml">
                 <xpath expr="//div[@name='options']" position="inside">
                     <div>
