--- a/car-workshop/views/inherit_res_partner.xml
+++ b/car-workshop/views/inherit_res_partner.xml
@@ -39,14 +39,16 @@
                 <xpath expr='//div[@name="button_box"]' position='inside'>
                     <button class="oe_stat_button" type="action" icon="fa-car"
                         name="%(car-workshop.partner_vehicles)d"
-                        help="Vehicles related with this contact">
+                        help="Vehicles related with this contact"
+                        attrs="{'invisible': [('customer', '=', False)]}">
                         <field string="Vehicles" name="vehicles_count" widget="statinfo"/>
                     </button>
                 </xpath>
                 <xpath expr='//div[@name="button_box"]' position='inside'>
                     <button class="oe_stat_button" type="action" icon="fa-wrench"
                         name="%(car-workshop.partner_repairs)d"
-                        help="Repairs related with this contact">
+                        help="Repairs related with this contact"
+                        attrs="{'invisible': [('customer', '=', False)]}">
                         <field string="Repairs" name="repairs_count" widget="statinfo"/>
                     </button>
                 </xpath>
