[IMP] es un neumático por defecto.

--- a/tire_catalog/views/inherit_product_product.xml
+++ b/tire_catalog/views/inherit_product_product.xml
@@ -65,6 +65,9 @@
             <field name="view_type">form</field>
             <field name="view_mode">kanban,form,tree</field>
             <field name="domain">[("is_a_tire","=",True)]</field>
+            <field name="context">{
+                'default_is_a_tire':1
+                }</field>
             <field name="target">current</field>
         </record>
 
